--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,11 @@ dependencies:
   intl: ^0.18.0
   intl_utils: ^2.8.7
   shared_preferences: ^2.2.2
-  dcli: ^4.0.1-alpha.4
+  dcli: 4.0.1-beta.1
+
+dependency_overrides:
+  meta: ^1.12.0
+  dart_console2: <3.1.0
 
 dev_dependencies:
   lints: ^3.0.0
